; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_busdma_machdep.c_bus_dma_tag_set_domain.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_busdma_machdep.c_bus_dma_tag_set_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_dma_tag_common = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 (i64)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_dma_tag_set_domain(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.bus_dma_tag_common*, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = inttoptr i64 %7 to %struct.bus_dma_tag_common*
  store %struct.bus_dma_tag_common* %8, %struct.bus_dma_tag_common** %6, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %6, align 8
  %11 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @vm_phys_domain_match(i32 %9, i64 0, i32 %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %6, align 8
  %16 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp eq i32 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %31

20:                                               ; preds = %2
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %6, align 8
  %23 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.bus_dma_tag_common*, %struct.bus_dma_tag_common** %6, align 8
  %25 = getelementptr inbounds %struct.bus_dma_tag_common, %struct.bus_dma_tag_common* %24, i32 0, i32 1
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32 (i64)*, i32 (i64)** %27, align 8
  %29 = load i64, i64* %4, align 8
  %30 = call i32 %28(i64 %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %20, %19
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @vm_phys_domain_match(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
